# h265bitstream

./: CMakeLists.txt  README.md  bs.h  h265_analyze.c  h265_nal.c  h265_nal.cpp  h265_stream.c  h265_stream.cpp  h265_stream.h  h265bitstreamCMake.cpp  h265bitstreamCMake.h  h265bitstreamVS.sln  h265bitstreamVS.vcxproj  h265bitstreamVS.vcxproj.filters
x64/Debug/: h265bitstreamVS.exe.recipe  h265bitstreamVS.ilk  h265bitstreamVS.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/h265bitstreamVS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  h265bitstreamVS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
